# DynMatch

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  compile_withcmake.sh  construct.sh  dump_columns.sh  eval.sh  generate_names.sh  generate_performance_plot_time.sh  generate_performance_values.sh  generate_quality_perf_plot.sh  generate_test.sh  generate_test_shuf.sh  generate_time_perf_plot.sh  opt.sh  perfquality.sh  perftime.sh  plot.gnuplot  run.sh
app/: .dyn_blossom.h.swp  blossom.h  clean_sequence.cpp  compare_matchings.cpp  configuration.h  dyn_blossom.h  dyn_matching.cpp  error  executer.cpp  executer.h  glossary.cpp  glossary.h  match.cpp  metis_to_sequence.cpp  misc.cpp  misc.h  mv.h  parse_parameters.h
data/: dump_columns.sh  dump_columns_time.sh  generate_performance_plot.sh  generate_performance_plot_time.sh  plot_current.gnuplot  plot_current_time.gnuplot  plot_head.gnuplot  plot_head_time.gnuplot  results_social_baswana  results_social_blossom  results_social_dynblossom  results_social_dynblossom0.1  results_social_dynblossom0.25  results_social_dynblossom0.5  results_social_dynblossom1  results_social_dynblossom2  results_social_measure  results_social_neiman  results_social_randomwalk0.1  results_social_randomwalk0.25  results_social_randomwalk0.5  results_social_randomwalk1  results_social_randomwalk2  results_socialshuf_baswana  results_socialshuf_blossom  results_socialshuf_dynblossom  results_socialshuf_dynblossom0.1  results_socialshuf_dynblossom0.25  results_socialshuf_dynblossom0.5  results_socialshuf_dynblossom1  results_socialshuf_dynblossom2  results_socialshuf_measure  results_socialshuf_neiman  results_socialshuf_randomwalk0.1  results_socialshuf_randomwalk0.25  results_socialshuf_randomwalk0.5  results_socialshuf_randomwalk1  results_socialshuf_randomwalk2  results_walshaw_baswana  results_walshaw_blossom  (+28 more)
deploy/: convert_metis_seq  dynmatch
examples/: munmun_digg.undo.0.1.seq  wordassociation-2011.graph.seq
insertiononly/: results_dynprelim_baswana_PARAM_144.graph.seq_seed_1  results_dynprelim_baswana_PARAM_144.graph.seq_seed_10  results_dynprelim_baswana_PARAM_144.graph.seq_seed_2  results_dynprelim_baswana_PARAM_144.graph.seq_seed_3  results_dynprelim_baswana_PARAM_144.graph.seq_seed_4  results_dynprelim_baswana_PARAM_144.graph.seq_seed_5  results_dynprelim_baswana_PARAM_144.graph.seq_seed_6  results_dynprelim_baswana_PARAM_144.graph.seq_seed_7  results_dynprelim_baswana_PARAM_144.graph.seq_seed_8  results_dynprelim_baswana_PARAM_144.graph.seq_seed_9  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_1  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_10  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_2  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_3  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_4  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_5  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_6  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_7  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_8  results_dynprelim_baswana_PARAM_3elt.graph.seq_seed_9  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_1  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_10  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_2  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_3  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_4  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_5  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_6  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_7  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_8  results_dynprelim_baswana_PARAM_4elt.graph.seq_seed_9  (+13970 more)
lib/: Makefile  config.h  (+3 more)
(+6931 files in other folders)
